# news_project

./: .gitignore  README.md  pyproject.toml
news_project/: news_eda.py
