[tool.poetry]
name = "news-project"
version = "0.1.0"
description = ""
authors = ["gerardpc <gerardpc@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.14"
pandas = {extras = ["pyarrow"], version = "^2.2.0"}
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
